# segmentor

./: .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  cachepackages.nix  default.nix  deno.json  elm.json  flake.nix  fresh.gen.ts  index.html  main.ts  run-elm.sh  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: rust-debian.sh
.github/workflows/: deploy.yml
backend/: Cargo.toml  default.nix  helloworld.go  main.go  strava_response.html
backend/db/migrations/: 20220602210200_activities_table.up.sql
backend/src/: main.rs
backend/static/: index-development.html  index.html
backend/static/js/: PortFunnel.js
backend/static/js/PortFunnel/: LocalStorage.js
frontend/: default.nix  package.json
frontend/src/: Activities.tsx  App.tsx  Login.tsx  Sync.tsx  api.ts  cookies.ts  hooks.ts
routes/: _app.tsx  _middleware.ts  callback.ts  fresh.tsx  index.tsx
src/: AccessToken.elm  Activity.elm  Main.elm  PageNumber.elm  PortFunnels.elm  Status.elm  main.rs
static/: index-development.html  index-production.html  index.html
tests/: ActivityTests.elm
utils/: deno_kv_oauth.ts  http.ts  oauth2_client.ts
