[package]
name = "segmentor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
oauth2 = "4.1.0"
rocket = "0.5.0-rc.1"
strava = { git = "https://github.com/torhovland/strava-rs" }
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
