[package]
name = "segmentor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
oauth2 = "4.1.0"
strava = { git = "https://github.com/torhovland/strava-rs" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
axum = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
