[package]
name = "segmentor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
oauth2 = "4.1.0"
strava = { git = "https://github.com/torhovland/strava-rs" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.5.0", features = ["ws"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
reqwest = "0.11.10"
tower-cookies = "0.5.1"
